[package]
name = "seraphim"
version = "0.1.0"
edition = "2024"

[features]
default = ["net"]
net = ["dep:futures-util", "dep:rand_core", "dep:tokio", "dep:tokio-stream", "dep:tokio-util", "dep:iroh", "dep:z32"]

[dependencies]
colored = "3.1.1"
dashmap = "6.1.0"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

futures-util = { version = "0.3.32", features = ["sink"], optional = true }
rand_core = { version = "0.9.5", features = ["os_rng"], optional = true }
tokio = { version = "1.50.0", features = ["rt", "signal"], optional = true }
tokio-stream = { version = "0.1.18", optional = true }
tokio-util = { version = "0.7.18", features = ["codec"], optional = true }
iroh = { version = "0.97.0", optional = true }
z32 = { version = "1.3.0", optional = true }
